modernize java style