@@ -4,18 +4,14 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Enumeration;
-import java.util.Properties;
-import java.util.StringTokenizer;
+import java.util.*;
 
 /**
  * The <code>PropertyConfigurator</code> class contains configuration
- * information contained in the <code>jdepend.properties</code> file, 
- * if such a file exists either in the user's home directory or somewhere 
+ * information contained in the <code>jdepend.properties</code> file,
+ * if such a file exists either in the user's home directory or somewhere
  * in the classpath.
- * 
+ *
  * @author <b>Mike Clark</b>
  * @author Clarkware Consulting, Inc.
  */
@@ -27,7 +23,7 @@ public class PropertyConfigurator {
     public static final String DEFAULT_PROPERTY_FILE = "jdepend.properties";
 
     /**
-     * Constructs a <code>PropertyConfigurator</code> instance 
+     * Constructs a <code>PropertyConfigurator</code> instance
      * containing the properties specified in the file
      * <code>jdepend.properties</code>, if it exists.
      */
@@ -36,9 +32,9 @@ public class PropertyConfigurator {
     }
 
     /**
-     * Constructs a <code>PropertyConfigurator</code> instance 
+     * Constructs a <code>PropertyConfigurator</code> instance
      * with the specified property set.
-     * 
+     *
      * @param p Property set.
      */
     public PropertyConfigurator(Properties p) {
@@ -46,18 +42,18 @@ public class PropertyConfigurator {
     }
 
     /**
-     * Constructs a <code>PropertyConfigurator</code> instance 
+     * Constructs a <code>PropertyConfigurator</code> instance
      * with the specified property file.
-     * 
+     *
      * @param f Property file.
      */
     public PropertyConfigurator(File f) {
         this(loadProperties(f));
     }
 
-    public Collection getFilteredPackages() {
+    public Collection<String> getFilteredPackages() {
 
-        Collection packages = new ArrayList();
+        Collection<String> packages = new ArrayList<String>();
 
         Enumeration e = properties.propertyNames();
         while (e.hasMoreElements()) {
@@ -66,7 +62,7 @@ public class PropertyConfigurator {
                 String path = properties.getProperty(key);
                 StringTokenizer st = new StringTokenizer(path, ",");
                 while (st.hasMoreTokens()) {
-                    String name = (String) st.nextToken();
+                    String name = st.nextToken();
                     name = name.trim();
                     packages.add(name);
                 }
@@ -76,17 +72,17 @@ public class PropertyConfigurator {
         return packages;
     }
 
-    public Collection getConfiguredPackages() {
+    public Collection<JavaPackage> getConfiguredPackages() {
 
-        Collection packages = new ArrayList();
+        Collection<JavaPackage> packages = new ArrayList<JavaPackage>();
 
         Enumeration e = properties.propertyNames();
         while (e.hasMoreElements()) {
-            String key = (String)e.nextElement();
+            String key = (String) e.nextElement();
             if (!key.startsWith("ignore")
                     && (!key.equals("analyzeInnerClasses"))) {
                 String v = properties.getProperty(key);
-                packages.add(new JavaPackage(key, new Integer(v).intValue()));
+                packages.add(new JavaPackage(key, Integer.parseInt(v)));
             }
         }
 
@@ -98,7 +94,7 @@ public class PropertyConfigurator {
         String key = "analyzeInnerClasses";
         if (properties.containsKey(key)) {
             String value = properties.getProperty(key);
-            return new Boolean(value).booleanValue();
+            return Boolean.valueOf(value);
         }
 
         return true;
@@ -113,15 +109,12 @@ public class PropertyConfigurator {
 
         Properties p = new Properties();
 
-        InputStream is = null;
+        InputStream is;
 
         try {
-
             is = new FileInputStream(file);
-
         } catch (Exception e) {
-            is = PropertyConfigurator.class.getResourceAsStream("/"
-                    + DEFAULT_PROPERTY_FILE);
+            is = PropertyConfigurator.class.getResourceAsStream("/" + DEFAULT_PROPERTY_FILE);
         }
 
         try {
